# hakase-insights

./: Procfile  README.md  hakase-insights.ipynb  pyproject.toml
.github/workflows/: deliver.yml  integrate.yml
app/: agents.py  chains.py  server.py  tools.py
notebooks/: hakase-insights.ipynb
