[project]
name = "hakase-insights"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain",
    "langchain-community",
    "langserve[all]",
    "python-dotenv",
]

[dependency-groups]
dev = [
    "ipykernel",
    "jupyterlab",
    "langchain-cli",
    "ruff",
]
