[project]
name = "hakase-insights"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain",
    "langchain-community",
    "langserve[all]",
    "uvicorn[standard]",
]

[dependency-groups]
dev = [
    "ipykernel",
    "langchain-cli",
    "ruff",
]

[tool.ruff]
line-length = 100
target-version = "py313"
extend-exclude = [
    "**/migrations/*"
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestype warnings
    "F",    # Pyflakes
    "PL",   # Pylint
    "I",    # isort
    "C90",  # mccabe
    "FAST", # FastAPI
]