[project]
name = "hakase-insights"
version = "0.1.0"
description = "Class Academic Insights from hakase"
readme = "README.md"
license = "MPL-2.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "Framework :: FastAPI",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)"
]
requires-python = ">=3.13"
dependencies = [
    "langchain",
    "langchain-community",
    "langserve[all]",
    "sentry-sdk[fastapi]",
    "uvicorn[standard]",
]

[project.urls]
homepage = "https://hakase-insights.dragonejt.dev"
source = "https://github.com/dragonejt/hakase-insights.git"
issues = "https://github.com/dragonejt/hakase-insights/issues"

[dependency-groups]
dev = [
    "ipykernel",
    "langchain-cli",
    "ruff",
]

[tool.ruff]
line-length = 100
target-version = "py313"
extend-exclude = [
    "**/migrations/*"
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestype warnings
    "F",    # Pyflakes
    "PL",   # Pylint
    "I",    # isort
    "C90",  # mccabe
    "FAST", # FastAPI
]
